[tool.poetry]
name = "wrapchain-ui"
version = "0.1.0"
description = ""
authors = ["kyaukyuai <y.kakui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
streamlit = "^1.33.0"
wrapchain = "^0.0.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
